--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
 </head>
-<body>
+<body id="gradient">
     <h1>Background Generator</h1>
-    <input type="color" name="color1" value="#00FF00">
-    <input type="color" name="color2" value="#FF0000">
+    <input class="color1" type="color" name="color1" value="#00FF00">
+    <input class="color2" type="color" name="color2" value="#FF0000">
     <h2>Current CSS Background</h2>
     
 
